[metadata]
name = cloud_enum
version = 1.0
license = MIT
url = https:/github.com/initstring/cloud_enum
author = initstring
author_email = 26131150+initstring@users.noreply.github.com

[options]
packages = cloud_enum
install_requires =
    requests

[options.entry_points]
console_scripts =
    cloud_enum = cloud_enum.main:main
